# paNote

./: .gitignore  .gitmodules  LICENSE  api设计.md  dev_log.md  dev_rec.md  panote.md  panote_struct.panote  readme.md
.github/workflows/: deploy_my_blog.yaml  sync2gitee.yml
docker/: Dockerfile.ServerBuilder  build_server.sh  example_docker_compose.yml  example_nginx.conf  front_nginx.conf
old/pa_note_server.old/: .gitignore  Cargo.toml  authority_config_template.json
old/pa_note_server.old/src/: authority.rs  conv.rs  temp_gen_distribute.rs_
old/panote_vue/: README.md  tsconfig.json  vue.config.js
old/panote_vue/src/: auto_update.ts  background.ts  electron_net.js  electron_net_ts.ts  elementplus.ts  log.ts  net_pack_recv.ts  note.ts  talk_packer.ts
old/python_control_anki/: README.md  __init__.py  debug_window.py  handle_msg.py  manifest.json  net_send.py  test.py
pa_note_front/: .gitignore  README.md  tsconfig.json  vue.config.js
pa_note_front/script/: apis.yaml  docker_dev_2gencompose.py  gen_api_v2.py
pa_note_front/src/: App.vue  main.ts
pa_note_front/src/3rd/: pa_util_ts.ts
pa_note_front/src/components/: BottomLineFunc.ts  ClickDetector.js  EditorBarDataReflect.vue  EditorToolFunc.js  LinkCanvasBarToListView.ts  NoteConfigDialog.vue  NoteListBar.vue  NoteListBarTs.ts  NoteListFuncTs.ts  NoteOutline.vue  Path.vue  PathJumpBtn.vue  PathTS.ts  RightPart.vue  SideBarSwitch.vue  TemplateTs.vue  ToolSelectSpecial.vue  UpdateState.vue
pa_note_front/src/logic/: app_func.ts  authority.ts  event_center.ts  gen_api_auth.ts  gen_api_content.ts  gen_api_list.ts  log.ts  route.ts
pa_note_server.wasm/: pa_note_server.code-workspace
pa_note_server.wasm/_wasm_serverless_lib/: Cargo.toml
pa_note_server.wasm/_wasm_serverless_lib/src/: lib.rs
pa_note_server.wasm/panote_auth/: Cargo.toml  app.yaml
pa_note_server.wasm/panote_auth/src/: gen_api.rs  impl.rs  lib.rs  struct.rs
pa_note_server.wasm/panote_content/: Cargo.toml  app.yaml
pa_note_server.wasm/panote_content/src/: gen_api.rs  impl.rs  lib.rs  struct.rs
pa_note_server.wasm/panote_content/src/impl/: kv.rs  mod.rs
pa_note_server.wasm/panote_list/: Cargo.toml  app.yaml
pa_note_server.wasm/panote_list/src/: gen_api.rs  impl.rs  lib.rs  struct.rs
pa_note_web/: README.md  package-lock.json  package.json
pa_note_web/docker/: Dockerfile.Front  Dockerfile.Server  authority_config_template.json  build_front.sh  build_server_builder.sh  front_entry_point.sh
pa_note_web/pa_note_front/: .dockerignore  .gitignore  package-lock.json  package.json  vue.config.js
pa_note_web/pa_note_front/script/: docker_build_dev.py  docker_dev_1buildimg.py  docker_dev_2gencompose.py  docker_run_dev.py  gen_api_code.ts  template_api_caller.ts  template_gen_distribute.rs
pa_note_web/pa_note_server/: .gitignore  Cargo.toml
pa_note_web/pa_note_server/default/: db
pa_note_web/pa_note_server/src/: authority.rs  gen_distribute.rs  gen_send.rs  main.rs  note_man.rs  server.rs  temp_gen_distribute.rs_  util.rs
pa_note_web/script/: gen_api_code.ts  template_api_caller.ts  template_gen_distribute.rs  template_gen_send.rs
pa_note_web/src/: App.vue
pa_note_web/src/3rd/: pa_util_ts.ts
pa_note_web/src/assets/: quill.snow.css
pa_note_web/src/components/: ArticleList.vue  CompPropSetting.vue  (+20 more)
panote_flutter/: README.md  pubspec.yaml
panote_flutter/lib/: main.dart
panote_flutter/linux/: CMakeLists.txt  my_application.cc
panote_flutter/test/: widget_test.dart
panote_flutter/web/: index.html  manifest.json
panote_flutter/windows/: CMakeLists.txt
panote_qt/: CMakeLists.txt  main.cpp  main.qml  panote_qt_zh_CN.ts
panote_vue/: README.md  package-lock.json  package.json  vue.config.js
panote_vue/src/: App.vue  AppFunc.js  AppFunc.ts  auto_update.ts  background.ts  bus.js  bus.ts  electron_net.js  electron_net_ts.ts  elementplus.ts  ipc.ts  log.ts  main.js  main.ts  net_pack_recv.ts  note.ts  search.ts  talk_packer.ts  talk_with_anki.ts
python_control_anki/: README.md  __init__.py  anki_util.py  debug_window.py  handle_msg.py  manifest.json  net_send.py  python_control_anki.ankiaddon  tcp_pack_construct.py  test.py
python_control_anki/websocket_server/: websocket_server.py
script/: .gitignore  1.prepare_env.py  2.gen_api.py  3.pack_backend.py  http_conf_auth.yaml  http_conf_content.yaml  http_conf_list.yaml  pack_backend.py
script/files/: .gitignore  authority_config copy.json
(+417 files in other folders)
