[package]
name = "wasm_serverless_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["lib"]

[dependencies]
wasmedge-bindgen = "0.4.1"
tracing = "0.1.40"
parking_lot = "0.12.1"
lazy_static = "1.4.0"

[features]
test = []
