
[package]
name = "pa_note_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version= "0.5.13", features = ["ws", "headers"]  }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.0"
env_logger = "0.9.0"
lazy_static = "1.4.0"
futures = "0.3.21"
pakv_kernel = { path="./pakv_talentplan/pakv_kernel" }
parking_lot = "0.12.1"
jsonwebtoken = "8.1.1"
chrono = "0.4"
